--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
     "react-toastify": "^11.0.5",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
