--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
     "@types/react-transition-group": "^4.4.12",
     "@vitejs/plugin-react": "^4.5.2",
     "eslint": "^9.29.0",
