--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest --watch"
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.6.1",
     "axios": "^1.11.0",
     "jest": "^30.0.5",
     "react": "^19.1.0",
